# Sbix

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  tmLanguage.json  tmLanguage.yaml
.github/: FUNDING.yml
examples/: Hello42.sbix
examples/Print42_42Times/: 42.sbix  printNumber.c
scripts/: fastinstall.sh
src/: HandleBring.cpp  HandleBring.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Semantic.cpp  Semantic.h  Simbixit.cpp  Token.h  builder.cpp  builder.h  diagnostics.h  lex_helper.h  parse_helper.cpp  parse_helper.h
